[UPD] indes method now recognise and report if pizzas list is empty. Page content will cahnge accordingly

--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -9,7 +9,9 @@
 
     <h1>Pizzas</h1>
 
-    <table>
+    <h3 th:if="${message}" th:text="${message}"></h3>
+
+    <table th:if="${pizzas}">
         <thead>
             <tr>
                 <th>ID</th>
