--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -18,6 +18,7 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Price</th>
+                <th>Go to details</th>
             </tr>
         </thead>
         <tbody>
@@ -26,6 +27,7 @@
                 <td th:text="${pizza.name}"></td>
                 <td th:text="${pizza.description}"></td>
                 <td th:text="${pizza.price}"></td>
+                <td><a th:href="@{/pizzas/{id}(id=${pizza.id})}">Details</a></td>
             </tr>
         </tbody>
     </table>
