--- a/src/main/resources/templates/pizzas/create.html
+++ b/src/main/resources/templates/pizzas/create.html
@@ -14,21 +14,46 @@
         <div>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" th:field="*{name}" placeholder="Pizza name (e.g., Margherita)"
-                required />
+                required th:errorclass="is-invalid" />
+
+            <div th:if="${#fields.hasErrors('name')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('name')}" th:text="${error}"></li>
+                </ul>
+            </div>
         </div>
         <div>
             <label for="description">Description:</label>
             <textarea id="description" name="description" th:field="*{description}" placeholder="Pizza description"
-                required></textarea>
+                required th:errorclass="is-invalid"></textarea>
+
+            <div th:if="${#fields.hasErrors('description')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('description')}" th:text="${error}"></li>
+                </ul>
+            </div>
         </div>
         <div>
             <label for="photo">Photo:</label>
             <input type="text" id="photo" name="photo" th:field="*{photo}"
-                placeholder="Pizza photo (e.g., Margherita.jpg)" required />
+                placeholder="Pizza photo (e.g., Margherita.jpg)" required th:errorclass="is-invalid" />
+
+            <div th:if="${#fields.hasErrors('photo')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('photo')}" th:text="${error}"></li>
+                </ul>
+            </div>
         </div>
         <div>
             <label for="price">Price:</label>
-            <input type="number" id="price" name="price" th:field="*{price}" placeholder="Price in euros" required />
+            <input type="number" id="price" name="price" th:field="*{price}" placeholder="Price in euros" required
+                th:errorclass="is-invalid" />
+
+            <div th:if="${#fields.hasErrors('price')}">
+                <ul>
+                    <li th:each="error : ${#fields.errors('price')}" th:text="${error}"></li>
+                </ul>
+            </div>
         </div>
         <button type="submit">Create Pizza</button>
 
