--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -38,7 +38,7 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Price</th>
-                <th>Go to details</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -47,7 +47,19 @@
                 <td th:text="${pizza.name}"></td>
                 <td th:text="${pizza.description}"></td>
                 <td th:text="${pizza.price}"></td>
-                <td><a th:href="@{/pizzas/{id}(id=${pizza.id})}">Details</a></td>
+                <td>
+                    <a th:href="@{/pizzas/{id}(id=${pizza.id})}">
+                        <button>View details</button>
+                    </a>
+
+                    <a th:href="@{/pizzas/edit/{id}(id=${pizza.id})}">
+                        <button>Edit info</button>
+                    </a>
+
+                    <form th:action="@{/pizzas/delete/{id}(id=${pizza.id})}" method="post" style="display:inline;">
+                        <button type="submit">Delete pizza</button>
+                    </form>
+                </td>
             </tr>
         </tbody>
     </table>
