[FIX] fixed edit form action endpoint

--- a/src/main/resources/templates/pizzas/edit.html
+++ b/src/main/resources/templates/pizzas/edit.html
@@ -9,7 +9,7 @@
 
     <h1>Edit Pizza [[${pizza.name}]]</h1>
 
-    <form th:action="@{/pizzas/edit}" method="post" th:object="${pizza}">
+    <form th:action="@{/pizzas/edit/{id}(id=${pizza.id})}" method="post" th:object="${pizza}">
 
         <div>
             <label for="name">Name:</label>
